@@ -896,7 +896,7 @@ A test.Second test.<div class="myclass">Another test with myclass set.</div><p>T
 Fifth test in HTML.<br />Line two.</div>
 <div class="section" id="container">
 <h2><a class="toc-backref" href="#id68">2.18&nbsp;&nbsp;&nbsp;Container</a></h2>
-<div class="custom container">
+<div class="custom docutils container">
 <p>paragraph 1</p>
 <p>paragraph 2</p>
 </div>
